# dinspect

./: .gitignore  LICENSE  README.md  README.rst  dinspect.cabal  jsonplot.py  setup.py  stack.yaml  test_jsonplot.py
dinspect/: __main__.py  changepoints.py  outliers.py  plot.py
src/: CliArgs.hs  Main.hs  Plot.hs
test/: doctests.hs
tests/: test_changepoints.py  test_plot.py
