name:                dinspect
version:             0.1.0.0
homepage:            https://github.com/mfussenegger/dinspect#readme
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dinspect
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , optparse-applicative
                     , aeson
                     , Chart
                     , Chart-cairo
